--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,15 +2,21 @@ cmake_minimum_required (VERSION 3.10)
 
 project(altv-wasm)
 
+set(ALTV_WASM_DEPS ${CMAKE_SOURCE_DIR}/deps)
+
 include_directories(
-  deps/altv-capi/capi/BUILD/altv-capi-client-static/include
+  ${ALTV_WASM_DEPS}/altv-capi/capi/BUILD/altv-capi-client-static/include
+)
+link_directories(altv-wasm-static PUBLIC
+  ${ALTV_WASM_DEPS}/wasmtime/${CMAKE_BUILD_TYPE}
 )
 
+set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT /Zi")
+set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd")
+
+# Static
 add_library(altv-wasm-static STATIC
   src/main.cpp
-)
-target_link_directories(altv-wasm-static PUBLIC
-  deps/wasmtime/${CMAKE_BUILD_TYPE}
 )
 target_link_libraries(altv-wasm-static PUBLIC
   # platform libs
@@ -21,17 +27,42 @@ target_link_libraries(altv-wasm-static PUBLIC
   shell32.lib
   ole32.lib
 
-  deps/altv-capi/capi/BUILD/altv-capi-client-static/lib/Debug/altv-capi-client-static.lib
+  ${ALTV_WASM_DEPS}/altv-capi/capi/BUILD/altv-capi-client-static/lib/Debug/altv-capi-client-static
   # altv-capi-client-static$<$<CONFIG:Debug>:-mtd>
   # wasmtime.lib
 )
 
-set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT /Zi")
-set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd")
-
 set_target_properties(altv-wasm-static PROPERTIES
   # OUTPUT_NAME "altv-wasm"
   CXX_STANDARD 17
-  RUNTIME_OUTPUT_DIRECTORY_DEBUG "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/Debug"
-  RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/Release"
+  RUNTIME_OUTPUT_DIRECTORY_DEBUG "${CMAKE_BINARY_DIR}/Debug"
+  RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CMAKE_BINARY_DIR}/Release"
+)
+
+# Shared
+add_library(altv-wasm-shared SHARED
+  src/main.cpp
+)
+target_link_directories(altv-wasm-shared PUBLIC
+${ALTV_WASM_DEPS}/wasmtime/${CMAKE_BUILD_TYPE}
+)
+target_link_libraries(altv-wasm-shared PUBLIC
+  # platform libs
+  ws2_32.lib
+  advapi32.lib
+  userenv.lib
+  ntdll.lib
+  shell32.lib
+  ole32.lib
+
+  ${ALTV_WASM_DEPS}/altv-capi/capi/BUILD/altv-capi-client-static/lib/Debug/altv-capi-client-static.lib
+  # altv-capi-client-static$<$<CONFIG:Debug>:-mtd>
+  # wasmtime.lib
+)
+
+set_target_properties(altv-wasm-shared PROPERTIES
+  OUTPUT_NAME "altv-wasm"
+  CXX_STANDARD 17
+  RUNTIME_OUTPUT_DIRECTORY_DEBUG "${CMAKE_BINARY_DIR}/Debug"
+  RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CMAKE_BINARY_DIR}/Release"
 )
