Updated CMakeLists to generate pdb

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,8 +13,9 @@ link_directories(altv-wasm-static PUBLIC
         ${ALTV_WASM_DEPS}/altv-capi/capi/BUILD/altv-capi-client-static/lib/${CMAKE_BUILD_TYPE}
         )
 
-set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT /Zi")
-set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd")
+set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT /Zi /bigobj")
+set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd /bigobj")
+set(CMAKE_SHARED_LINKER_FLAGS_RELEASE "${CMAKE_SHARED_LINKER_FLAGS_RELEASE} /DEBUG:FULL /OPT:REF /OPT:ICF")
 
 add_definitions(
         -DWASM_API_EXTERN=
