Fix debug building, C++20

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required(VERSION 3.10)
 
 project(altv-wasm)
 
+get_filename_component(_vs_bin_path "${CMAKE_LINKER}" DIRECTORY)
+
 set(ALTV_WASM_DEPS ${CMAKE_SOURCE_DIR}/deps)
 set(ALTV_WASM_SOURCES
         src/main.cpp
@@ -13,14 +15,17 @@ set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /EHsc /MT /Zi /bigobj")
 set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /EHsc /MTd /bigobj")
 set(CMAKE_SHARED_LINKER_FLAGS_RELEASE "${CMAKE_SHARED_LINKER_FLAGS_RELEASE} /DEBUG:FULL /OPT:REF /OPT:ICF")
 
+set(ALTV_WASM_CAPI_LIB_DIR ${ALTV_WASM_DEPS}/altv-capi/capi/BUILD/altv-capi-client-static$<IF:$<CONFIG:Debug>,-mtd,>/lib/$<IF:$<CONFIG:Debug>,Debug,Release>)
+set(ALTV_WASM_CAPI_LIB ${ALTV_WASM_CAPI_LIB_DIR}/altv-capi-client-static$<IF:$<CONFIG:Debug>,-mtd,>.lib)
+
 include_directories(
         ${ALTV_WASM_DEPS}/wasmtime/include
         ${ALTV_WASM_DEPS}/altv-capi/capi/BUILD/altv-capi-client-static/include
         ${ALTV_WASM_DEPS}/altv-capi/cpp-sdk
         )
 link_directories(
-        ${ALTV_WASM_DEPS}/wasmtime/lib/${CMAKE_BUILD_TYPE}
-        ${ALTV_WASM_DEPS}/altv-capi/capi/BUILD/altv-capi-client-static$<IF:$<CONFIG:Debug>,-mtd,>/lib/${CMAKE_BUILD_TYPE}
+        ${ALTV_WASM_DEPS}/wasmtime/lib/Release
+        ${ALTV_WASM_CAPI_LIB_DIR}
         )
 add_definitions(
         -DWASM_API_EXTERN=
@@ -50,10 +55,14 @@ target_link_libraries(altv-wasm-static PUBLIC
 
 set_target_properties(altv-wasm-static PROPERTIES
         # OUTPUT_NAME "altv-wasm"
-        CXX_STANDARD 17
+        CXX_STANDARD 20
         RUNTIME_OUTPUT_DIRECTORY_DEBUG "${CMAKE_BINARY_DIR}/Debug"
         RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CMAKE_BINARY_DIR}/Release"
         )
+
+add_custom_command(TARGET altv-wasm-static POST_BUILD
+        COMMAND "${_vs_bin_path}/lib.exe" /OUT:${CMAKE_BINARY_DIR}/$<IF:$<CONFIG:Debug>,Debug,Release>/altv-wasm.lib ${CMAKE_BINARY_DIR}/$<IF:$<CONFIG:Debug>,Debug,Release>/altv-wasm-static.lib "${ALTV_WASM_CAPI_LIB}" "${ALTV_WASM_DEPS}/wasmtime/lib/Release/wasmtime.lib"
+)
 
 # ----------------------------
 #           Shared
@@ -73,16 +82,11 @@ target_link_libraries(altv-wasm-shared PUBLIC
 
         altv-capi-client-static$<IF:$<CONFIG:Debug>,-mtd,>.lib
         wasmtime.lib
-
-        libvcruntime.lib # __imp_calloc
-        # libucrt.lib
-        # libcmt.lib
-        # libcpmt.lib
         )
 
 set_target_properties(altv-wasm-shared PROPERTIES
         OUTPUT_NAME "altv-wasm"
-        CXX_STANDARD 17
+        CXX_STANDARD 20
         RUNTIME_OUTPUT_DIRECTORY_DEBUG "${CMAKE_BINARY_DIR}/Debug"
         RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CMAKE_BINARY_DIR}/Release"
         )
